--- a/src/HAI711I_Graphes_Structures/tds/exam_blanc.tex
+++ b/src/HAI711I_Graphes_Structures/tds/exam_blanc.tex
@@ -13,7 +13,21 @@
 
         \input{../assets/tikz/exam_blanc_ex_1_2.tex}
 
-        Ensuite, 
+        Ensuite, on peut faire passer 2 de flot par \(sbdp\) et 1 de flot par \(scfp\) pour obtenir les graphes suivants:
+
+		\input{../assets/tikz/exam_blanc_ex_1_3.tex}
+
+        Ensuite, on peut faire passer 1 de flot par \(sadp\) et 3 par \(sbep\):
+
+        \input{../assets/tikz/exam_blanc_ex_1_4.tex}
+
+        Il ne reste plus qu'à faire passer une dernière fois 1 de flot par \(sadbep\) et on aura fini:
+
+        \input{../assets/tikz/exam_blanc_ex_1_5.tex}
+
+        On a trouvé un flot maximal de valeur 10.
+        Une coupe minimale est donnée par l'ensemble des sommets atteignables depuis \(s\) dans le réseau résiduel final, soit \(\{s, c\}\).
+        
 	\end{td-sol}
 }{}
 
