maj dm graphes + debut td9 logique

--- a/src/HAI713I_Logique_Calculabilite/tds/td_main.tex
+++ b/src/HAI713I_Logique_Calculabilite/tds/td_main.tex
@@ -64,5 +64,10 @@
     \section{TD8}\label{sec:TD8}
     \setcounter{tdcounter}{0}
     \input{../tds/td_8.tex}
+
+    \newpage
+    \section{TD9}\label{sec:TD9}
+    \setcounter{tdcounter}{0}
+    \input{../tds/td_9.tex}
 \end{document}
 
